--- a/berlin/lod/vocabtheme/templates/voc_helper.html.jinja
+++ b/berlin/lod/vocabtheme/templates/voc_helper.html.jinja
@@ -1,18 +1,37 @@
 {% import 'berlin.lod.basetheme/helper.html.jinja' as helper with context %}
 
-{% macro term_list(results, term_var='term', title_properties=[], title_languages=[]) -%}
-  <ul class="term-container">
-  {% for row in results %}
-    <li class="term">
-      <a href="{{ row[term_var] | relative_uri }}">
-        {% set term_local_name = helper.prefix_label(row[term_var]) %}
-        {% if not title_properties %}
-          {{ row[term_var] | title_any(languages=title_languages, default=term_local_name) }}
-        {% else %}
-          {{ row[term_var] | get_text(properties=title_properties, languages=title_languages, default=term_local_name, return_first=True) }}
-        {% endif %}
-      </a>
-    </li>
-  {% endfor %}
-  </ul>
+{% macro term_list(results, title=none, term_var='term', type_var=none, title_properties=[], title_languages=[]) -%}
+  {#
+    Parameters:
+      - title: title for this term list, if any
+      - results: the query result object from rdflib
+      - term_var: the name of the variable used for the term we want to show
+      - type_var: the name of the variable used for the type of the term, if any
+      - title_properties: list of RDF properties to be checked for titles for display
+      - title_languages: list of language codes to be checked for titles
+  #}
+  <div class="card">
+    {% if title %}
+      <h2 class="card-header">
+        {{ title }}
+      </h2>
+    {% endif %}
+    <ul class="term-container list-group list-group-flush">
+      {% for row in results %}
+        <li class="term list-group-item">
+          <a href="{{ row[term_var] | relative_uri }}">
+            {% set term_local_name = helper.prefix_label(row[term_var]) %}
+            {% if not title_properties %}
+              {{ row[term_var] | title_any(languages=title_languages, default=term_local_name) }}
+            {% else %}
+              {{ row[term_var] | get_text(properties=title_properties, languages=title_languages, default=term_local_name, return_first=True) }}
+            {% endif %}
+          </a>
+          {% if type_var %}
+            ({{ helper.prefix_link(row[type_var]) }})
+          {% endif %}
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
 {%- endmacro %}
